# pre-commit-license-headers

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  Makefile  README.md  poetry.toml  pyproject.toml
pre_commit_license_headers/: __init__.py  check_license_headers.py  file_types.py
tests/: __init__.py  check_license_headers_test.py
tests/resources/: invalid_long.sh  invalid_owner.txt  invalid_short.py  missing_header.py  tokenize_fail.yaml  valid_1.py  valid_2.py
