# Copyright (c) 2021 The Pre-Commit License Headers Authors
# Use of this source code is governed by a BSD-3-clause license that can
# be found in the LICENSE file or at https://opensource.org/licenses/BSD-3-Clause

[tool.poetry]
name = "pre-commit-license-headers"
version = "0.1.0"
description = "A pre-commit hook to check source code license headers"
authors = ["Jeffrey James <lobotmcj@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/johannsdg/pre-commit-license-headers"
keywords = [
    "pre-commit",
    "license",
    "copyright",
    "utility",
    "python"
]

[tool.poetry.scripts]
check-license-headers = "pre_commit_license_headers.check_license_headers:main"

[tool.poetry.dependencies]
python = "^3.6.2"
identify = "^2.2.13"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
black = {extras = ["d"], version = "^21.5b1"}
bump2version = "^1.0.1"
commitizen = "^2.17.11"
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
isort = "^5.8.0"
pre-commit = "^2.9.2"
pytest = "^6.0.2"
pytest-cov = "^2.12.1"
safety = "^1.9.0"
twine = "^3.4.1"

[tool.isort]
profile = "black"
known_first_party = ["pre_commit_license_headers"]
lines_after_imports = 2

[tool.commitizen]
tag_format = "v$version"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
